# ts7400v2-utils-linux4.x

./: LICENSE  configure.ac
scripts/: eMMC_post  prep_customer_image  prep_stock_image
src/: Makefile.am  gpiolib.c  gpiolib.h  i2c-rtc.c  i2c-rtc.h  tshwctl.c  tsmicroctl.c
