tshwctl_SOURCES = tshwctl.c i2c-rtc.c
tshwctl_CFLAGS = -O0 -Wall -fno-tree-cselim

tsmicroctl_SOURCES = tsmicroctl.c
tsmicroctl_CFLAGS = -O0 -Wall -fno-tree-cselim
tsmicroctl_CPPFLAGS = -DCTL

gpioctl_SOURCES = gpiolib.c
gpioctl_CFLAGS = -O0 -Wall -fno-tree-cselim
gpioctl_CPPFLAGS = -DCTL

bin_PROGRAMS = tshwctl tsmicroctl gpioctl

